@@ -4,5 +4,5 @@ project.organization=com.twitter
 project.name=ostrich
 sbt.version=0.7.4
 project.version=4.10.6-SNAPSHOT
-build.scala.versions=2.9.1 2.8.1
+build.scala.versions=2.8.1 2.9.1
 project.initialize=false
