@@ -1,14 +1,14 @@
 #Automatically generated by ProjectDependencies
-#Tue Feb 21 10:31:34 PST 2012
-com.twitter/util-core_2.9.1=1.12.13
+#Mon Feb 13 15:54:54 PST 2012
+util|util-core=com.twitter/util-core
 com.twitter/util-core=1.12.13
-util|util-eval=com.twitter/util-eval
 util|util-core_2.9.1=com.twitter/util-core_2.9.1
+com.twitter/util-core_2.9.1=1.12.13
+util|util-eval=com.twitter/util-eval
+com.twitter/util-eval=1.12.13
+util|util-eval_2.9.1=com.twitter/util-eval_2.9.1
+com.twitter/util-eval_2.9.1=1.12.13
 util|util-logging=com.twitter/util-logging
 com.twitter/util-logging=1.12.13
-util|util-core=com.twitter/util-core
 util|util-logging_2.9.1=com.twitter/util-logging_2.9.1
 com.twitter/util-logging_2.9.1=1.12.13
-com.twitter/util-eval=1.12.13
-com.twitter/util-eval_2.9.1=1.12.13
-util|util-eval_2.9.1=com.twitter/util-eval_2.9.1
